--- a/index.html
+++ b/index.html
@@ -3060,5 +3060,25 @@ keyElement.classList.add('expected');
 setInterval(highlightExpectedKey, 100);
 });
 </script>
+<script>
+  // Bloquear clic derecho
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+    alert('Acción no permitida');
+  });
+
+  // Bloquear atajos comunes (F12, Ctrl+Shift+I, Ctrl+U)
+  document.addEventListener('keydown', function(e) {
+    if (e.key === 'F12') {
+      e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key.toLowerCase() === 'i') {
+      e.preventDefault();
+    }
+    if (e.ctrlKey && e.key.toLowerCase() === 'u') {
+      e.preventDefault();
+    }
+  });
+</script>
 </body>
 </html>
